Bug 14616 - winexe: Kerberos option does not do a Kerberos auth
Summary: winexe: Kerberos option does not do a Kerberos auth
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Other (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andreas Schneider
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-15 15:40 UTC by Andreas Schneider
Modified: 2021-06-21 12:48 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2021-01-15 15:40:48 UTC
The Kerberos option does not do a Kerberos auth.
Comment 1 Andreas Schneider 2021-01-15 15:41:43 UTC
I will fix that using the new cmdline parser I'm working on.
Comment 2 Samba QA Contact 2021-06-21 00:11:04 UTC
This bug was referenced in samba master:

32a71e50b49db2b06ea7a8a2b8aa0606b0455f1f
Comment 3 Andreas Schneider 2021-06-21 12:48:51 UTC
Will be fixed with Samba 4.15 in autumn.